# curlz

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  index.html  print.html  renovate.json  searchindex.js  searchindex.json  template-functions.html
.github/workflows/: book-cd.yml  book-ci.yml  build-v2.yml  build.yml  deploy.yml  publish-to-ghcr.yml  release-assets.yml  release-please.yml  release-plz.yml  release.yml
crates/curlz/: Cargo.toml
crates/curlz/src/curlz/cli/: header_args.rs  mod.rs
crates/curlz/src/curlz/data/request/: http_headers.rs
crates/curlz/src/curlz/ops/: save_bookmark.rs
crates/curlz/src/curlz/template/functions/: mod.rs  process_env.rs
crates/curlz/src/curlz/workspace/environment/: dot_env.rs  env.rs
crates/templ-lang/: Cargo.toml
crates/templ-lang/src/snapshots/: curlz__language__parser__tests__expr__parse_boolean.snap
curlz/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
curlz/src/curlz/: http_file.rs  interactive.rs  lib.rs  test_utils.rs
curlz/src/curlz/cli/: execute.rs  header_args.rs  mod.rs
curlz/src/curlz/cli/commands/: bookmark.rs  request.rs
curlz/src/curlz/cli/sub_commands/: bookmark.rs  http_file.rs  mod.rs  request.rs
curlz/src/curlz/domain/: mod.rs
curlz/src/curlz/domain/bookmark/: collection.rs  load_bookmark.rs  mod.rs  save_bookmark.rs
curlz/src/curlz/domain/bookmark/collection_impl/: bookmark_folder_collection.rs  mod.rs
curlz/src/curlz/domain/bookmark/collection_impl/snapshots/: curlz__domain__bookmark__collection_impl__bookmark_folder_collection__tests__should_handle_save_bookmark_command.snap
curlz/src/curlz/domain/environment/: dot_env.rs  env.rs  yaml_env.rs
curlz/src/curlz/domain/http/: http_headers.rs  http_request.rs  http_uri.rs  mod.rs
curlz/src/curlz/domain/http_file/: parse_request.rs
curlz/src/curlz/domain/http_lang/: http-lang-grammar.pest  mod.rs  parse_request.rs
curlz/src/curlz/domain/request/: context.rs  issue_request.rs  mod.rs
curlz/src/curlz/domain/request/backend/: invoke_curl.rs  mod.rs
curlz/src/curlz/ops/: load_bookmark.rs  mod.rs  run_curl.rs
curlz/src/curlz/request/: mod.rs
curlz/src/curlz/request/backend/: curl_invoker.rs  mod.rs
curlz/src/curlz/request/bookmark/: load_bookmark.rs  mod.rs  save_bookmark.rs
curlz/src/curlz/request/environment/: dot_env.rs  env.rs  yaml_env.rs
curlz/src/curlz/request/http/: http_request.rs
curlz/src/curlz/templ-lang/: ast_visitor.rs  lexer.rs  mod.rs
curlz/src/curlz/templ-lang/snapshots/: curlz__language__parser__tests__expr__parse_sys_var.snap  curlz__language__parser__tests__expr__parse_var.snap
curlz/src/curlz/template/: mod.rs  variables.rs
curlz/src/curlz/template/functions/: jwt.rs  mod.rs  process_env.rs  prompt.rs
curlz/src/curlz/template/functions/auth/: basic.rs  jwt.rs  mod.rs
curlz/src/curlz/template/functions/chrono/: mod.rs  timestamp.rs
curlz/src/curlz/workspace/: bookmark_collection.rs  mod.rs
curlz/src/curlz/workspace/environment/: dot_env.rs  env.rs  mod.rs  yaml_env.rs
curlz/tests/: basics.rs  testlib.rs
docker/: Dockerfile  Makefile  entrypoint.sh
docs/: book.toml
docs/src/: README.md  SUMMARY.md  template-functions.md
examples/: README.md
examples/http-file/: README.md  basic-auth-header.http  post-to-httpbin.http  with_trailing_whitespaces.http
src/: cli.rs  main.rs  processor.rs  request.rs  variables.rs
src/commands/: bookmark_as.rs  mod.rs  run_curl.rs  save_bookmark.rs
src/curlz/: http.rs  http_file.rs  interactive.rs  lib.rs  processor.rs  template.rs  test_utils.rs  utils.rs  variables.rs
src/curlz/cli/: header_args.rs  main.rs  mod.rs
src/curlz/cli/commands/: request.rs
src/curlz/data/: bookmark.rs  mod.rs
src/curlz/data/request/: http_body.rs  http_headers.rs  http_request.rs  http_version.rs  mod.rs
src/curlz/language/: ast.rs  lexer.rs  mod.rs  parser.rs  runtime.rs  tokens.rs
src/curlz/language/snapshots/: curlz__language__parser__tests__expr__parse_process_env.snap
src/curlz/ops/: load_bookmark.rs  mod.rs  run_curl.rs  save_bookmark.rs
src/curlz/template/: mod.rs
src/curlz/template/functions/: jwt.rs  mod.rs  prompt.rs
src/curlz/workspace/: bookmark_collection.rs
src/curlz/workspace/environment/: dot_env.rs  env.rs  mod.rs
src/curlz/workspace/snapshots/: curlx__workspace__bookmark_collection__tests__should_handle_save_bookmark_command.snap  curlz__workspace__bookmark_collection__tests__should_handle_save_bookmark_command.snap  curlz__workspace__bookmark_collection__tests__should_handle_save_bookmark_command.snap.new
src/data/: bookmark.rs
src/data/request/: http_headers.rs  http_method.rs  http_request.rs  mod.rs
src/parser/: http-grammar.pest
src/snapshots/: curlx__processor__tests__should_handle_bookmark_as_command.snap.new
src/workspace/: bookmark_collection.rs  mod.rs
src/workspace/environment/: mod.rs  yaml_env.rs
src/workspace/snapshots/: curlx__workspace__bookmark_collection__tests__should_handle_save_bookmark_command.snap
tests/: basics.rs  testlib.rs
tests/fixtures/: send-payload-as-post.http
