[package]
name = "curlx"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
description = "curl wrapper with templating, bookmarking and environments powers just like postman"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
license-file = "LICENSE"
include = ["src/**/*", "LICENSE", "*.md"]

[dependencies]
anyhow = "1.0"
console = "0.15"
convert_case = "0.5"
dialoguer = "0.10"
filenamify = "0.1"
toml = "0.5"
liquid = "0.26"
liquid-core = "0.26"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
serde_yaml = "0.8"
thiserror = "1.0"
walkdir = "2.3"

[dev-dependencies]
insta = "1.14.1"
tempfile = "3.3"
