[package]
name = "curlx"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
description = "curl wrapper with placeholder, bookmark and environment powers just like postman"
version = "0.1.0-alpha.1"
edition = "2021"
license = "GPL-3.0-only"
include = ["src/**/*", "LICENSE", "*.md"]

[dependencies]
clap = { version = "3.2", features = ["derive", "std", "cargo"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
serde_yaml = "0.8"
dotenvy = { version = "0.15" }
anyhow = "1.0"
convert_case = "0.5"
dialoguer = "0.10"
filenamify = "0.1"
regex = "1.5"

# todo: re-evaluate template engine, try tera and mini-jinja
liquid = "0.26"
liquid-core = "0.26"

[dev-dependencies]
insta = "1.15"
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.1"
