[package]
name = "curlz"
authors = ["Sven Assmann <sven@d34dl0ck.me>"]
description = "curl wrapper with placeholder, bookmark and environment powers just like postman"
version = "0.1.0-alpha.2"
edition = "2021"
license = "GPL-3.0-only"
include = ["src/**/*", "LICENSE", "*.md"]

[dependencies]
env_logger = "0.9"
log = "0.4"
clap = { version = "3.2", features = ["derive", "std", "cargo"], default-features = false }
clap-verbosity-flag = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dotenvy = { version = "0.15" }
anyhow = "1.0"
convert_case = "0.5"
dialoguer = "0.10"
filenamify = "0.1"

minijinja = "0.17.0"

[dev-dependencies]
insta = "1.17"
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.1"

[[bin]]
name = "curlz"

[lib]
name = "curlz"
path = "src/curlz/lib.rs"